lwcExperienceSite/main/default/objects/Residence__c/Residence__c.object-meta.xml
<CustomObject>
    <label>Residence</label>
    <nameField>
        <label>Residence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Residences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>