lwcExperienceSite/main/default/objects/Residence__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Residences</relationshipLabel>
    <relationshipName>Residences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>