lwcExperienceSite/main/default/objects/Residence__c/fields/number_of_beds__c.field-meta.xml
<CustomField>
    <fullName>number_of_beds__c</fullName>
    <label># of Beds</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>